@@ -2,7 +2,6 @@ package com.korit.cheerful_back.security.model;
 
 import com.korit.cheerful_back.domain.user.User;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import lombok.Builder;
@@ -23,10 +22,7 @@ public class PrincipalUser implements UserDetails, OAuth2User {
 
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-//    return Collections.singletonList(new SimpleGrantedAuthority(user.getRole()));
-    String role = user.getRole(); // 또는 admin.getRole()
-    String authority = role != null && role.startsWith("ROLE_") ? role : "ROLE_" + role;
-    return List.of(new SimpleGrantedAuthority(authority));
+    return List.of(new SimpleGrantedAuthority(user.getRole()));
   }
 
   @Override
